# HCI-Project

./: CMakeLists.txt
OglRender/: CMakeLists.txt
OglRender/include/ogl-render/: shader-prog.h
core/: CMakeLists.txt
core/apps/: game.cc
core/python/: serial-sim.py
core/shaders/: 3d-perspective-points.vs  3d-perspective.vs  default.fs  microfacet.fs  normals.fs  phong.fs
hand_test/hand_test/: environment.yaml  hand_side.py  point_history_classifier.py  readme.md  test.cpp
hand_test/hand_test/model/point_history_classifier/: hand_classifier_v2.tflite  training_hand_addnorm+2lstm.hdf5
